# heat_conductor

./: CMakeLists.txt  README.md
include/: plate.hpp  plate_cuda.hpp
lab4/: CMakeLists.txt
lab4/include/: plate.hpp  plate_cuda.hpp
lab4/src/: main.cpp  plate.cpp  plate_cuda.cu
src/: main.cpp  plate.cpp  plate_cuda.cu
